tests/NormalTests/paczka1/small_fuzzy/29604637.err
Error in line 1: sVfVS S310 38,7
Error in line 9: kckYnXkFa S310 1,3
Error in line 3: HRE6O A430 85,6
Error in line 14: HRE6O S871 64,3
